# name-country-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  make.cmd  manage.py  pyproject.toml
name_country/: asgi.py  settings.py  urls.py  wsgi.py
names/: admin.py  models.py  serializers.py  urls.py  views.py
names/migrations/: 0001_initial.py
names/services/: external_apis.py
names/tests/: test_views.py
